tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0182/input.js
x: while (true) { x: while (true) { } }
